	-- Access to EncounterCounter in C3P0ImplUtils ought to have been synchronized. It was
	   not. Fixed, by placing the counter underneath an sync'ed wrapper. Many thanks to
	   Keith Amling for calling attention to this issue.
c3p0-0.9.5-pre3
	-- For reasons that remain obscure, the published build of c3p0-0.9.5-pre2 is missing
	   JDBC4 methods (many thanks to edysli on github for pointing this out). Apparently
	   it was accidentally built against JDBC3 libraries. Added a compile-time check 
	   for JDBC4 api in generated code to C3P0ImplUtils.
	-- Divided ComboPooledDataSource into final implementation class and an abstract class
	   which can be extended to derive debugging filters. Created two such filters,
	   com.mchange.v2.c3p0.debug.AfterCloseLoggingComboPooledDataSource and 
	   com.mchange.v2.c3p0.debug.CloseLoggingComboPooledDataSource
	-- C3P0PooledConnectionPool destroyResource() calls are now protected by in-use resource 
	   locks to prevent rare deadlocks during simultaneous test / destroy.   
	-- HOCON resources are now loaded as a single group, so that resolution of substitutions
	   works across multiple files.
	-- Fixed bug in HOCON support where files that include substitutions like ${myScope.varName}
	   would throw a ConfigException.NotResolved. These substitutions are now resolved. Many thanks
	   to Stjepan Buljat for calling attention to this issue.
	-- Support standard HOCON config files application.properties and application.json as well
	   as application.conf
	-- Fixed ClassCastException when (now deprecated!) usesTraditionalReflectiveProxies is set to
	   true. Many thanks to Konrad Garus for reporting the issue.
	-- NewProxyConnectionGenerator has been modified so that Connections only mark transactions
	   as known-resolved after the putatively resolving operation has successfully completed,
	   rather than when it is merely attempted.
	-- With FINEST/TRACE debug logging, full JVM stack traces are now emitted during any